--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -19,7 +19,6 @@
 
 		body {
 			text-align: center;
-			font-family: Arial;
 		}
 
 		h1 {
@@ -91,11 +90,11 @@
 						<!-- ------------------------------------------------------------- -->
 						<label class="w3-left w3-section">아이디</label>
 						<!-- ------------------------------------------------------------- -->
-						<input type="text" class="w3-input font-black" name="id" id="id" />
+						<input type="text" class="w3-input" name="id" id="id" />
 						<!-- ------------------------------------------------------------- -->
 						<label class="w3-left w3-section">비밀번호</label>
 						<!-- ------------------------------------------------------------- -->
-						<input type="password" class="w3-input font-black" name="pw" id="pw" />
+						<input type="password" class="w3-input" name="pw" id="pw" />
 						<!-- ------------------------------------------------------------- -->
 
 						<div class="grid w3-section">
