--- a/WebContent/baemin/sw03_ShopPage.html
+++ b/WebContent/baemin/sw03_ShopPage.html
@@ -24,6 +24,11 @@
 			display: grid;
 			grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 		}
+
+		.star {
+			box-shadow: 5px;
+			cursor: pointer;
+		}
 	</style>
 
 </head>
@@ -143,7 +148,7 @@
 					</div>
 				</div>
 				<div id="tab1" class="w3-row" style="display: none;">
-					<div class="w3-container" style="background-color: #EAEAEA;">
+					<div class="w3-container w3-border-bottom w3-border-top" style="background-color: #EAEAEA;">
 						<p>메뉴 소개</p>
 					</div>
 					<!-- 반복 시작-->
@@ -151,7 +156,7 @@
 						<p>
 							<label>아부찌 부대찌개3인분(비조리) </label><br>
 							<label class="w3-small w3-text-gray">기본 3인분</label><br>
-							<label>3인분:13900원</label>
+							<label>13900원</label>
 						</p>
 					</div>
 					<!-- 반복 끝-->
@@ -160,7 +165,7 @@
 						<p>
 							<label>특스팸 부대찌개3인분(비조리) </label><br>
 							<label class="w3-small w3-text-gray">기본 3인분</label><br>
-							<label>3인분:16900원</label>
+							<label>16900원</label>
 						</p>
 					</div>
 					<!-- 반복 끝-->
@@ -169,18 +174,105 @@
 						<p>
 							<label>우삼겹 부대찌개3인분(비조리) </label><br>
 							<label class="w3-small w3-text-gray">기본 3인분</label><br>
-							<label>3인분:18900원</label>
+							<label>18900원</label>
 						</p>
 					</div>
 					<!-- 반복 끝-->
 
 				</div>
-				<div id="tab2" class="w3-row w3-blue" style="display: none;">tab2</div>
-				<div id="tab3" class="w3-row w3-yellow" style="display: none;">tab3</div>
+				<div id="tab2" class="w3-row" style="display: none;">
+					<div class="w3-container w3-border-bottom w3-border-top" style="background-color: #EAEAEA;">
+						<p><b>가게 소개</b></p>
+					</div>
+					<div class="w3-panel">
+						<p>
+							☆아부찌 부대찌개 3인분 13,900원☆<br>
+							가성비 최고! 술안주 짱!<br>
+							<br>
+							맛있는 부대찌개를 저렴한 가격에 맛보실수 있습니다<br>
+							비조리 상태로 배달되니 냄비에 넣고 끓이기만 하면됩니다.
+						</p>
+					</div>
+					<div class="w3-container w3-border-bottom w3-border-top" style="background-color: #EAEAEA;">
+						<p><b>가게 주소</b></p>
+					</div>
+					<div class="w3-panel">
+						<p>
+							서울특별시 구로구 오류로8길 20 1층(오류동)
+						</p>
+					</div>
+					<div class="w3-container w3-border-bottom w3-border-top" style="background-color: #EAEAEA;">
+						<p><b>가게 전화번호</b></p>
+					</div>
+					<div class="w3-panel">
+						<p>
+							050-4994-5681
+						</p>
+					</div>
+				</div>
+				<div id="tab3" class="w3-row" style="display: none;">
+					<div class="w3-container w3-border-bottom w3-border-top" style="background-color: #EAEAEA;">
+						<p><b>리뷰/평점</b></p>
+					</div>
+
+					<div class="w3-container w3-border-bottom" style="margin-top: 5px;">
+						<div class="w3-row w3-center" style="margin-top: 5px;">
+
+							<i class="material-icons star" onclick="star_click(0)"
+								style="font-size: 36px; color: #eaeaea;">star</i>
+							<i class="material-icons star" onclick="star_click(1)"
+								style="font-size: 36px; color: #eaeaea;">star</i>
+							<i class="material-icons star" onclick="star_click(2)"
+								style="font-size: 36px; color: #eaeaea;">star</i>
+							<i class="material-icons star" onclick="star_click(3)"
+								style="font-size: 36px; color: #eaeaea;">star</i>
+							<i class="material-icons star" onclick="star_click(4)"
+								style="font-size: 36px; color: #eaeaea;">star</i>
+
+						</div>
+
+						<script>
+							function star_click(e) {
+								// console.log("star " + e + "  click!!!");
+
+								for (var i = 0; i < 5; i++) {
+
+									if (i <= e) {
+										document.getElementsByClassName("star")[i].style.color = "#ffbb00";
+									} else {
+										document.getElementsByClassName("star")[i].style.color = "#eaeaea";
+									}
+								}
+
+							}
+						</script>
+
+						<div class=" w3-row" style="margin-top: 5px;">
+							<div class="w3-col w3-right"
+								style="width: 10%; margin-right: 3%; margin-left: 2%; margin-top: 3%;">
+								<input type="button" class="w3-btn w3-border w3-round-large w3-large"
+									style="background-color: white;" value="등록">
+							</div>
+
+							<div class="w3-rest">
+								<textarea rows="3" style="width:100%; resize:none" id="content"></textarea>
+							</div>
+						</div>
+						<br>
+					</div>
+					<div class="w3-row">
+						<div class="w3-col">
+							<label>jinjin7676</label>
+							<label></label>
+
+						</div>
+					</div>
+				</div>
 			</div>
-
-
 		</div>
+
+
+	</div>
 	</div>
 
 	<!-- HEAD ------------------------------------------------------------------------------------ -->
