--- a/WebContent/baemin/sw02_ShopList.html
+++ b/WebContent/baemin/sw02_ShopList.html
@@ -85,11 +85,6 @@
                 </div>
                 <!-- 반복 끝 -->
 
-
-
-
-
-
                 <!-- main content end----------------------------------------------------------------------- -->
             </div>
         </div>
@@ -98,26 +93,16 @@
 
         <!-- HEAD ------------------------------------------------------------------------------------ -->
         <!-- head가 맨 나중?나중에 나온 요소가 레이어 맨위로... ---------------------------------------->
-        <div class="topnav w3-card-4" id="topNav">
-            <a href="#" class="w3-baemint active">배달의 인종 </a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a> <strong>aaaa</strong>님 환영합니다.
-            </a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a href="#">마이페이지</a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a href="https://ceo.baemin.com/guide/detail/G73002">내 주문</a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a href="#">로그아웃</a>
-            <!-- -------------------------------------------------------------------------- -->
-            <a href="javascript:void(0);" class="icon" onclick="responsiveMenuPopUp()"> <i class="fa fa-bars"></i>
-            </a>
+        <div class="w3-card-4 w3-center w3-baemint" id="topnav">
+            <div class="w3-baemint">
+                <h3 style="font-family: baemin_font;">배달의 인종</h3>
+            </div>
         </div>
 
         <script>
             /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
             function responsiveMenuPopUp() {
-                var x = document.getElementById("topNav");
+                var x = document.getElementById("topnav");
                 if (x.className === "topnav w3-card-4") {
                     x.className += " responsive";
                 } else {
@@ -126,11 +111,34 @@
             }
 
             window.onresize = function () {
-                var x = document.getElementById("topNav");
-                x.className = "topnav w3-card-4";
+                //   var x = document.getElementById("topNav");
+                //   x.className = "topnav w3-card-4";
             }
         </script>
+        <div class="w3-bottom w3-center w3-border-top" style="padding-bottom: 5px; background: #ffffffdd;">
+            <div class="w3-row sw-container-500" style="margin-top: 5px; height: 20px;">
+                <a href="#" class="w3-button w3-col s3 w3-center" style="padding: 0px;">
+                    <i class="material-icons" style="font-size:48px;color:#45c1bf;">home</i>
+                </a>
+                <a href="#" class="w3-button w3-col s3 w3-center" style="padding: 0px;">
+                    <i class="material-icons" style="font-size:48px;color:#45c1bf;">notifications</i>
+                </a>
+                <a href="#" class="w3-button w3-col s3 w3-center" style="padding: 0px;">
+                    <i class="material-icons" style="font-size:48px;color:#45c1bf;">local_grocery_store</i>
+                </a>
+                <a href="#" class="w3-button w3-col s3 w3-center" style="padding: 0px;">
+                    <i class="material-icons" style="font-size:48px;color:#45c1bf;">account_circle</i>
+                </a>
+            </div>
 
+            <div class="w3-row sw-container-500">
+                <div class="w3-col s3 w3-center">Home</div>
+                <div class="w3-col s3 w3-center">Notice</div>
+                <div class="w3-col s3 w3-center">Order</div>
+                <div class="w3-col s3 w3-center">Mypage</div>
+            </div>
+
+        </div>
 
 
 </body>
