--- a/WebContent/baemin/sw03_ShopPage.html
+++ b/WebContent/baemin/sw03_ShopPage.html
@@ -75,7 +75,7 @@
 
 
 
-				<div class="w3-row-padding w3-section">
+				<!-- <div class="w3-row-padding w3-section">
 					<div class="w3-col w3-left" style="width: 150px;">
 						<button class="w3-button w3-gray w3-block w3-round-xlarge" type="button"
 							onclick="aa()">전화</button>
@@ -85,11 +85,11 @@
 					</div>
 				</div>
 				<div class="w3-row">가게주소가여기에들어간다</div>
-				<div class="w3-row">상세주소가여기세들어간다</div>
+				<div class="w3-row">상세주소가여기세들어간다</div> -->
 
-				<input type="text" name="x1" id="x1" value="좌표값이들어가는데hidden 예정"> <input type="text" name="y1" id="y1"
-					value="좌표값이들어가는데hidden 예정">
-				<p>&nbsp;</p>
+				<input type="hidden" name="x1" id="x1" value="좌표값이들어가는데hidden 예정">
+				<input type="hidden" name="y1" id="y1" value="좌표값이들어가는데hidden 예정">
+				<br>
 			</div>
 
 		</div>
@@ -233,7 +233,10 @@
 
 						<script>
 							function star_click(e) {
-								// console.log("star " + e + "  click!!!");
+								console.log("star " + e + "  click!!!");
+
+								var rank = e + 1;
+								document.getElementById("bbb").innerText = rank;
 
 								for (var i = 0; i < 5; i++) {
 
@@ -246,7 +249,6 @@
 
 							}
 						</script>
-
 						<div class=" w3-row" style="margin-top: 5px;">
 							<div class="w3-col w3-right"
 								style="width: 10%; margin-right: 3%; margin-left: 2%; margin-top: 3%;">
@@ -258,13 +260,25 @@
 								<textarea rows="3" style="width:100%; resize:none" id="content"></textarea>
 							</div>
 						</div>
+
+						<input type="hidden" id="bbb">
+
 						<br>
 					</div>
 					<div class="w3-row">
-						<div class="w3-col">
-							<label>jinjin7676</label>
-							<label></label>
-
+						<div class="w3-col" style="margin-left: 2%;">
+							<label>jinjin7676</label><br>
+							<label>
+								<i class="material-icons star" style="font-size: 16px; color: #FFBB00">star</i>
+								<i class="material-icons star" style="font-size: 16px; color: #FFBB00">star</i>
+								<i class="material-icons star" style="font-size: 16px; color: #FFBB00">star</i>
+								<i class="material-icons star" style="font-size: 16px; color: #FFBB00">star</i>
+								<i class="material-icons star" style="font-size: 16px; color: #FFBB00">star</i>
+							</label>
+							<label style="font-size: 12px;">2020-06-10</label>
+						</div>
+						<div class="w3-container">
+							<p style="margin-top: 5px;">음 존맛탱입니다. 근데 부대찌개는 살이 너무 많이 찝니다</p>
 						</div>
 					</div>
 				</div>
@@ -277,27 +291,16 @@
 
 	<!-- HEAD ------------------------------------------------------------------------------------ -->
 	<!-- head가 맨 나중?나중에 나온 요소가 레이어 맨위로... ---------------------------------------->
-	<div class="topnav w3-card-4" id="topNav">
-		<a href="#" class="w3-baemint active">배달의 인종 </a>
-		<!-- -------------------------------------------------------------------------- -->
-		<a> <strong>aaaa</strong>님 환영합니다.
-		</a>
-		<!-- -------------------------------------------------------------------------- -->
-		<a href="#">마이페이지</a>
-		<!-- -------------------------------------------------------------------------- -->
-		<a href="https://ceo.baemin.com/guide/detail/G73002">내 주문</a>
-		<!-- -------------------------------------------------------------------------- -->
-		<a href="#">로그아웃</a>
-		<!-- -------------------------------------------------------------------------- -->
-		<a href="javascript:void(0);" class="icon" onclick="responsiveMenuPopUp()">
-			<i class="fa fa-bars"></i>
-		</a>
+	<div class="w3-card-4 w3-center w3-baemint" id="topnav">
+		<div class="w3-baemint">
+			<h3 style="font-family: baemin_font;">배달의 인종</h3>
+		</div>
 	</div>
 
 	<script>
 		/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
 		function responsiveMenuPopUp() {
-			var x = document.getElementById("topNav");
+			var x = document.getElementById("topnav");
 			if (x.className === "topnav w3-card-4") {
 				x.className += " responsive";
 			} else {
@@ -306,11 +309,34 @@
 		}
 
 		window.onresize = function () {
-			var x = document.getElementById("topNav");
-			x.className = "topnav w3-card-4";
+			//   var x = document.getElementById("topNav");
+			//   x.className = "topnav w3-card-4";
 		}
 	</script>
+	<div class="w3-bottom w3-center w3-border-top" style="padding-bottom: 5px; background: #ffffffdd;">
+		<div class="w3-row sw-container-500" style="margin-top: 5px; height: 20px;">
+			<a href="#" class="w3-button w3-col s3 w3-center" style="padding: 0px;">
+				<i class="material-icons" style="font-size:48px;color:#45c1bf;">home</i>
+			</a>
+			<a href="#" class="w3-button w3-col s3 w3-center" style="padding: 0px;">
+				<i class="material-icons" style="font-size:48px;color:#45c1bf;">notifications</i>
+			</a>
+			<a href="#" class="w3-button w3-col s3 w3-center" style="padding: 0px;">
+				<i class="material-icons" style="font-size:48px;color:#45c1bf;">local_grocery_store</i>
+			</a>
+			<a href="#" class="w3-button w3-col s3 w3-center" style="padding: 0px;">
+				<i class="material-icons" style="font-size:48px;color:#45c1bf;">account_circle</i>
+			</a>
+		</div>
 
+		<div class="w3-row sw-container-500">
+			<div class="w3-col s3 w3-center">Home</div>
+			<div class="w3-col s3 w3-center">Notice</div>
+			<div class="w3-col s3 w3-center">Order</div>
+			<div class="w3-col s3 w3-center">Mypage</div>
+		</div>
+
+	</div>
 
 
 
