--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -74,7 +74,7 @@
 			<div class="w3-section w3-container w3-card-4 w3-baemint">
 				<!-- 1 main content start here!!!----------------------------------------------------------- -->
 
-				<h1 class="w3-section">베달의 종족</h1>
+				<h1 class="w3-section">배달의 종족</h1>
 
 				<div class="tab">
 					<button id="btn1" class="tablinks" onclick="clientFormOpen()">사용자
