--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -119,7 +119,7 @@
 							<button class="w3-button w3-baemint w3-border" type="submit">
 								사장님 로그인</button>
 							<button class="w3-button w3-baemint w3-border" type="button"
-								onClick="location.href='./memberShop/JoinFormShop.jsp'">가맹점
+								onClick="location.href='./joinShop/JoinFormShop.jsp'">가맹점
 								가입</button>
 						</div>
 					</form>
