모든파일대문자

--- a/WebContent/baemin/sw01_Main.html
+++ b/WebContent/baemin/sw01_Main.html
@@ -253,9 +253,9 @@
                     var isIDOK = result.trim() + "";
                     console.log("isIDOK=" + isIDOK);
                     if (isIDOK == "yes") {
-                        hasIDCheck = 1;
+                        hasIdCheck = 1;
                     } else {
-                        hasIDCheck = 0;
+                        hasIdCheck = 0;
                     }
                 },
                 error: function (xhr, status, error) {
