--- a/WebContent/memberClient/sw_joinFormClient.html
+++ b/WebContent/memberClient/sw_joinFormClient.html
@@ -210,7 +210,7 @@
 				.ajax({
 					type: "get",
 					//dataType : "text",
-					url: "idCheck.jsp",
+					url: "IdCheck.jsp",
 					data: data1,
 					success: function (result) {
 						console.log("result=" + result);
