--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>배달의 종족</title>
+	<title>배달의 인종</title>
 
 	<!-- CDN OFFLINE- sw_topNav.css -->
 	<link rel="stylesheet" href="./sw_css/sw-1.0.0.css" />
@@ -74,7 +74,7 @@
 			<div class="w3-section w3-container w3-card-4 w3-baemint">
 				<!-- 1 main content start here!!!----------------------------------------------------------- -->
 
-				<h1 class="w3-section">배달의 종족</h1>
+				<h1 class="w3-section">배달의 인종</h1>
 
 				<div class="tab">
 					<button id="btn1" class="tablinks" onclick="clientFormOpen()">사용자
@@ -83,7 +83,7 @@
 				</div>
 
 				<div id="tab1" class="tabcontent">
-					<form action="./joinClient/loginClientPro.jsp" method="POST" name="loginFormClient">
+					<form action="./joinClient/LoginClientPro.do" method="POST" name="loginFormClient">
 						<!-- ------------------------------------------------------------- -->
 						<label class="w3-left w3-section">아이디</label>
 						<!-- ------------------------------------------------------------- -->
