--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -105,7 +105,7 @@
 				</div>
 
 				<div id="tab2" class="tabcontent">
-					<form action="./joinShop/loginShopPro.jsp" method="POST" name="LoginFormShop">
+					<form action="./joinShop/LoginShopPro.do" method="POST" name="LoginFormShop">
 						<label class="w3-left w3-section">아이디</label>
 						<!-- ------------------------------------------------------------- -->
 						<input type="text" class="w3-input" name="shopID" id="shopID" />
