--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -98,7 +98,7 @@
 							<button class="w3-button w3-baemint w3-border" type="submit">
 								로그인</button>
 							<button class="w3-button w3-baemint w3-border" type="button"
-								onClick="location.href='./memberClient/JoinFormCilent.jsp'">
+								onClick="location.href='./joinClient/JoinFormCilent.do'">
 								회원가입</button>
 						</div>
 					</form>
@@ -119,7 +119,7 @@
 							<button class="w3-button w3-baemint w3-border" type="submit">
 								사장님 로그인</button>
 							<button class="w3-button w3-baemint w3-border" type="button"
-								onClick="location.href='./joinShop/JoinFormShop.jsp'">가맹점
+								onClick="location.href='./joinShop/JoinFormShop.do'">가맹점
 								가입</button>
 						</div>
 					</form>
